--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   <meta name="twitter:title" content="Faith Naff for Caldwell County Commissioner">
   <meta name="twitter:description" content="15+ years of experience fighting for transparency, affordable housing, and economic growth. Help Caldwell County grow together.">
   <meta name="twitter:image" content="https://faithforcaldwell.com/images/faith2.jpg">
+
+  <meta name="geo.region" content="US-NC">
+<meta name="geo.placename" content="Caldwell County, North Carolina">
+<meta name="geo.position" content="35.9176;-81.5409">
   
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -54,28 +58,48 @@
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Faith Naff",
-    "jobTitle": "Candidate for Caldwell County Commissioner",
-    "description": "Business manager and industrial engineer running for Caldwell County Commissioner",
-    "email": "faithnaff@outlook.com",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Granite Falls",
-      "addressRegion": "NC",
-      "addressCountry": "US"
-    },
-    "alumniOf": {
-      "@type": "CollegeOrUniversity",
-      "name": "Appalachian State University"
-    },
-    "affiliation": {
-      "@type": "Organization",
-      "name": "The Committee to Elect Faith Naff"
-    }
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Faith Naff",
+  "jobTitle": "Candidate for County Commissioner",
+  "description": "Candidate for Caldwell County Commissioner",
+  "url":  "https://faithforcaldwell.com/",
+  "image": "https://faithforcaldwell.com/images/faith2.jpg",
+  "sameAs": [
+    "https://www.facebook.com/faithforcaldwell",
+    "https://twitter.com/faithforcaldwell"
+  ],
+  "knowsAbout": [
+    "Business Management",
+    "Industrial Engineering",
+    "Local Government",
+    "Economic Development"
+  ],
+  "affiliation": {
+    "@type": "Organization",
+    "name": "Caldwell County Government"
   }
-  </script>
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "PoliticalOrganization",
+  "name":  "The Committee to Elect Faith Naff",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Granite Falls",
+    "addressRegion": "NC",
+    "addressCountry": "US"
+  },
+  "email": "faithnaff@outlook. com",
+  "areaServed": {
+    "@type": "AdministrativeArea",
+    "name": "Caldwell County, North Carolina"
+  }
+}
+</script>
   
 <script type="importmap">
 {
